--- a/Develop/package.json
+++ b/Develop/package.json
@@ -1,14 +1,17 @@
 {
   "name": "note-taker",
   "version": "1.0.0",
-  "description": "",
+  "description": "takes notes with express",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "devstart": "nodemon server.js"
   },
-  "author": "",
+  "author": "derek roberts",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.16.4"
+    "express": "^4.18.2",
+    "nodemon": "^2.0.20",
+    "uniqid": "^5.4.0"
   }
 }
