--- a/package.json
+++ b/package.json
@@ -5,13 +5,16 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "devstart": "nodemon server.js"
+    "devStart": "nodemon server.js"
   },
   "author": "derek roberts",
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.2",
-    "nodemon": "^2.0.20",
     "uniqid": "^5.4.0"
+  },
+  "keywords": [],
+  "devDependencies": {
+    "nodemon":"2.0.20"
   }
 }
